--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "json2csv": "^6.0.0-alpha.2",
