--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ SESSION_SECRET=your-secret-key
 # MySQL Database (Railway or local)
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=ImSFUQroREtEKaUpHlTHeXxgJVjVdqZX
+DB_PASSWORD=
 DB_NAME=sms_panel
